[package]
name = "jqesque"
version = "0.0.1"
edition = "2021"
authors = ["Terje Kvernes <terje@kvernes.no>"]
description = "Simple string assignment expressions with JQ-esque syntax for JSON interaction"
license = "MIT"
repository = "https://github.com/terjekv/jqesque"
readme = "README.md"
keywords = ["jq", "json", "expression", "assignment"]
categories = ["parsing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nom = { version = "7", features = ["alloc"] }
thiserror = "1"
json-patch = "3"
jsonptr = "0"
yare = "3"
