[package]
name = "jqesque"
version = "0.0.3"
edition = "2021"
authors = ["Terje Kvernes <terje@kvernes.no>"]
description = "Simple string assignment expressions with JQ-esque syntax for JSON interaction"
license = "MIT"
repository = "https://github.com/terjekv/jqesque"
readme = "README.md"
keywords = ["jq", "json", "expression", "assignment"]
categories = ["parsing"]

[dependencies]
nom-language = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nom = { version = "8", features = ["alloc"] }
thiserror = "2"
json-patch = "4"
jsonptr = "0"
yare = "3"
